--- a/manifests/discourse/configmap.yaml
+++ b/manifests/discourse/configmap.yaml
@@ -6,6 +6,8 @@ metadata:
 data:
   hostname: discourse.thisone.rocks
   smtp-address: smtp.sparkpostmail.com
-  smtp-port: "587"
+  # smtp-domain: thisone.rocks
+  # smtp-port: "587"
+  smtp-port: "2525"
   smtp-username: SMTP_Injection
   developer-emails: webwurst@gmail.com
